# PastryVision

./: README.md
backend/: .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml
backend/_docs/: managing_dependencies.md  mediapipe_official_example.ipynb
backend/app/: main.py  object_detection.py  pricing_model.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Card.jsx
frontend/src/components/Billing/: Billing.jsx  SummaryItem.jsx
frontend/src/data/: data.js
ml/: ml_model_training.ipynb
