[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for the PastryVision Web Application"
authors = ["Aryan Khurana <aryankhurana1511@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
ruff = "^0.7.4"
fastapi = "^0.115.5"
websockets = "^14.1"
opencv-python = "^4.10.0.84"
uvicorn = "^0.32.1"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
